--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ h1, a {
     text-decoration: none;
 }
 
-body,h2,h3,h4,h5 {font-family: sans-serif;}
+body,h2,h3,h4,h5 {font-family: 'Roboto',sans-serif;}
 
 body {margin: 0x;}
     
@@ -28,11 +28,17 @@ ul.topnav li a {
     
 ul.topnav li a:hover:not(.active) {background-color: #111;}
     
-ul.topnav li a.active {background-color: #4CAF50;}
+ul.topnav li a.active {
+        background-color: #4CAF50;}
     
 ul.topnav li.right {float: right;}
     
 @media screen and (max-width: 600px){
         ul.topnav li.right, 
         ul.topnav li {float: none;}
+}
+
+.w3-hover a
+{
+color: white;
 }
